Menu_MiniPanels 7.x-1.x-dev, xxxx-xx-xx
---------------------------------------
#1379542 by DamienMcKenna: Added note to README.txt about a known conflict
  with the DivX Player.
#1376860 by DamienMcKenna: Option to not output anything on admin pages.


Menu_MiniPanels 7.x-1.0-rc2, 2011-09-03
---------------------------------------
#1239292 by DamienMcKenna: Missed another line from rerolling the #1230622
  patch that caused the settings page to break.
#1116990 by kndr, DamienMcKenna: Added access to the qTips callbacks.
#1251804 by DamienMcKenna: Indicate what qTip JS file is being used.
#1238890 by DamienMcKenna: Leave a warning in hook_install() if the qTip JS
  library is not installed.
#1258150 by davidwhthomas: Incorrect usage of drupal_add_css() caused CSS
  aggregation to not work.
#1238882 by DamienMcKenna: Drush script to download the qTip script.
#1264738 by DamienMcKenna: Restructured how the output is built so now it now
  also works on 404 pages.


Menu_MiniPanels 7.x-1.0-rc1, 2011-08-04
---------------------------------------
#1230622 by DamienMcKenna: Missed a line when I originally rerolled this patch.
#943842 by DamienMcKenna: Allow the qTip file to be loaded from multiple paths
  but cache the path to offset the performance hit.
#943842 by DamienMcKenna: Now includes proper Libraries API support as the
  first location checked for the qTip JS file.
#1234654 by DamienMcKenna: Applied changes from the v6.x-1.1 release, including
  #997476 (custom targets), #980592 (duplicate menus), #945886 (duplicate
  minipanels) and #945884 (fixed JS regex); thanks to the respective
  contributors for their patches. Also tidied up a few small things - comments,
  output variables, etc. This update will require that configurations are
  re-saved to add important extra values; a message is left via hook_update_N()
  when updates are ran, and Watchdog will report errors on each page load until
  the problems are resolved.


Menu_MiniPanels 7.x-1.0-beta4, 2011-07-31